<resources>
    <string name="app_name">DTM</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="create">Registratsiya</string>
    <string name="sign_in">Kirish</string>
    <string name="or_signup_with">or signup with</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="forget_password">Parolni unutdingizmi?</string>
    <string name="facebook_app_id">1252657175115561</string>
    <string name="fb_login_protocol_scheme">1252657175115561</string>
    <string name="default_web_client" translatable="false">917660014685-9gkvh5s1q4m7shdlabrnv5h6o7e6773e.apps.googleusercontent.com</string>
    <string name="ro_yhatdan_o_tish">Ro\'yhatdan o\'tish</string>



    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="favorites">Favorites</string>


</resources>