<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dtm.ui.registration.reg.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registration.reg.RegistrationFragment">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="350sp"
            android:background="@drawable/reg_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/primaryTextColor"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/ThemeOverlay.App.TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/ThemeOverlay.App.TextInputLayout"
            android:textColorHint="@color/primaryTextColor"
            android:hint="@string/username"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@={viewModel.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.App.TextInputLayout"
            android:layout_margin="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/img_bg"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sign_up"
            android:onClick="@{viewModel::onSigninButtonClicked}"
            android:text="@string/sign_in"
            android:textColor="@color/primaryColor"
            app:backgroundTint="@color/primaryTextColor"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:id="@+id/sign_up"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_bg"
            android:text="@string/ro_yhatdan_o_tish"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@id/til_password"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_marginTop="48sp"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

  <com.google.android.gms.common.SignInButton

            android:layout_height="40sp"
            android:layout_width="200dp"
            app:layout_constraintBottom_toTopOf="@+id/facebook"
            android:id="@+id/google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget"

            />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook"
            android:layout_width="200dp"
            android:layout_height="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/google"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>